--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
    "atom-space-pen-views": "^2.1.0",
     "pty.js": "^0.3.1",
     "term.js": "https://github.com/jeremyramin/term.js",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "electron-rebuild": "*"
+  },
+  "scripts": {
+    "postinstall": "electron-rebuild --version 1.3.6 --module-dir ."
   },
   "consumedServices": {
     "status-bar": {
